<resources>
    <string name="app_name">MyWorkout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Eat_Button">Калорийность продуктов</string>
    <string name="Count_calory">Рассчет калорийности</string>
    <string name="Exercises_list">Список упражнений</string>
    <string name="Create_Train">Создать тренировку</string>
    <string name="Trains_list">Список тренировок</string>
    <string name="Logout">Выйти</string>
    <string name="Hello">Привет, </string>
    <string name="Reset_Password">Сбросить пароль </string>
    <string name="add_exercise">add_exercise</string>
    <string name="first_line">Название:</string>
    <string name="second_line">Белки на 100 г.</string>
    <string name="third_line">Жиры на 100 г.</string>
    <string name="fourth_line">Углеводы на 100 г.</string>
    <string name="fifth_line">Калорийность</string>
    <string name="au_login">Email(предпочтительнее @gmail.com)</string>
    <string name="au_password">Password</string>
    <string name="au_button">Sign in</string>
    <string name="au_forget">Forget a password?</string>
    <string name="au_register">Register</string>
    <string name="au_title">My Workout</string>
    <string name="au_name">Name</string>
    <string name="male">Мужчина</string>
    <string name="female">Женщина</string>
    <string name="age">Введите возраст</string>
    <string name="weight">Введите вес</string>
    <string name="height">Введите рост</string>
    <string name="Result">Результат</string>
    <string name="Count">Рассчитать</string>
    <string name="lets_train">Тренироваться!</string>
    <string name="save">Сохранить</string>
    <string name="nullTime">0:00</string>
    <string name="observe_train_list">Просмотр тренировок</string>
    <string name="time_rest_after_set">Время отдыха между подходами</string>
    <string name="delete">Удалить</string>
    <string name="red_train">Редактировать</string>
</resources>