<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background_gradient"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="tiger"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_train"

        style="@style/menuTextStyle"
        android:background="@drawable/menu_buttons_style"
        android:text="Тренироваться!"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_trains_list"
        style="@style/menuTextStyle"
        android:background="@drawable/menu_buttons_style"
        android:text="@string/Trains_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_train" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_create_train"
        style="@style/menuTextStyle"
        android:background="@drawable/menu_buttons_style"
        android:text="@string/Create_Train"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_trains_list" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_show_exercises_list"
        style="@style/menuTextStyle"
        android:background="@drawable/menu_buttons_style"
        android:text="@string/Exercises_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_create_train" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_some_b"
        style="@style/menuTextStyle"
        android:layout_marginBottom="152dp"
        android:background="@drawable/menu_buttons_style"
        android:text="@string/some_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_show_exercises_list" />

</androidx.constraintlayout.widget.ConstraintLayout>